add main.css file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS4Noobs - He4rt Developers</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Em breve.</h1>
+  <section class="home">
+    <h1>Em breve.</h1>
+  </section>
 </body>
 </html>
