Criação da estrutura do site

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,8 +7,45 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <nav>
+    <div class="logo">
+      <img src="img/logo-he4rt.png" alt="" srcset="">
+    </div>
+  </nav>
   <section class="home">
-    <h1>Em breve.</h1>
+    <h1>CSS4Noobs</h1>
+    <h2>Um guia para inciantes em CSS.</h2>
+    <p>Criado com 💜 pela He4rt Developers</p>
   </section>
+  <section class="content">
+    <div class="left">
+      <div class="introducao">
+        <h3>Introdução</h3>
+        <ol>
+          <li>Boas Vindas</a></li>
+          <li>Comunicação</a></li>
+          <li>O que você precisa saber</a></li>
+          <li>O que é CSS</a></li>
+          <li>Como o CSS funciona</a></li>
+          <li>Quais as vantagens</a></li>
+          <li>Adicionando CSS no HTML</a></li>
+        </ol>
+      </div>
+      <div class="modulo-basico">
+        <h3>Módulo Básico</h3>
+        <p>Em construção.</p>
+      </div>
+      <div class="modulo-intermediario">
+        <h3>Modulo Intermediário</h3>
+        <p>Em construção.</p>
+      </div>
+    </div>
+    <div class="right">
+      <div class="result">
+
+      </div>
+    </div>
+  </section>
+  <footer><a href="http://heartdevs.com">He4rt Developers</a> - 2020</footer>
 </body>
 </html>
