Primeira versão do site

--- a/index.html
+++ b/index.html
@@ -5,47 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS4Noobs - He4rt Developers</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
-  <nav>
-    <div class="logo">
-      <img src="img/logo-he4rt.png" alt="" srcset="">
-    </div>
-  </nav>
   <section class="home">
     <h1>CSS4Noobs</h1>
     <h2>Um guia para inciantes em CSS.</h2>
-    <p>Criado com 💜 pela He4rt Developers</p>
+    <p>Criado com 💜 pela <a href="http://heartdevs.com" target="_blank" rel="noopener noreferrer">He4rt Developers</a></p>
   </section>
   <section class="content">
-    <div class="left">
-      <div class="introducao">
-        <h3>Introdução</h3>
-        <ol>
-          <li>Boas Vindas</a></li>
-          <li>Comunicação</a></li>
-          <li>O que você precisa saber</a></li>
-          <li>O que é CSS</a></li>
-          <li>Como o CSS funciona</a></li>
-          <li>Quais as vantagens</a></li>
-          <li>Adicionando CSS no HTML</a></li>
-        </ol>
+    <h2>Conteúdo 4Noobs</h2>
+    <div class="text-content">
+      <div class="left">
+        <div class="introducao">
+          <h3>Introdução</h3>
+          <ol>
+            <li id="boas-vindas">Boas Vindas</li>
+            <li id="comunicacao">Comunicação</li>
+            <li id="oqvps">O que você precisa saber</li>
+            <li id="oqec">O que é CSS</li>
+            <li id="cocf">Como o CSS funciona</li>
+            <li id="qav">Quais as vantagens</li>
+            <li id="acnh">Adicionando CSS no HTML</li>
+          </ol>
+        </div>
+        <div class="modulo-basico">
+          <h3>Módulo Básico</h3>
+          <p>Em construção.</p>
+        </div>
+        <div class="modulo-intermediario">
+          <h3>Modulo Intermediário</h3>
+          <p>Em construção.</p>
+        </div>
       </div>
-      <div class="modulo-basico">
-        <h3>Módulo Básico</h3>
-        <p>Em construção.</p>
-      </div>
-      <div class="modulo-intermediario">
-        <h3>Modulo Intermediário</h3>
-        <p>Em construção.</p>
-      </div>
-    </div>
-    <div class="right">
-      <div class="result">
-
+      <div class="right">
+        <div class="result">
+          <p>Navegue pelo conteúdo através do menu ao lado.</p>
+        </div>
       </div>
     </div>
   </section>
-  <footer><a href="http://heartdevs.com">He4rt Developers</a> - 2020</footer>
+  <footer><a href="http://heartdevs.com" target="_blank" rel="noopener noreferrer">He4rt Developers</a> - 2020</footer>
+  <script src="js/index.js"></script>
+  <!-- Lightweight client-side loader that feature-detects and load polyfills only when necessary -->
+  <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
+  <!-- Load the element definition -->
+<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
 </body>
 </html>
